--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "better-sqlite3": "^12.5.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
